# python-playground

./: .gitignore  .pylintrc  README.md  chuy.json  pyproject.toml  readme.md  scripts.py  setup.py
.github/workflows/: codeql-analysis.yml  publish.yml  pylint.yml  pytest.yml
data/: data.json  readme.md
playground/: __init__.py
playground/closures/: __init__.py  printer.py
tests/: __init__.py  test_closures.py  test_playground.py  test_snippets.py
ultiplayground/: __init__.py
ultiplayground/async/: hi.py  threads.py
ultiplayground/asyncowo/: fetch_async.py  fetch_sync.py  hi.py  threads_one.py
ultiplayground/closures/: __init__.py  incrementer.py  multiplier.py  printer.py  returner.py
ultiplayground/crypif/: crypto_shortname.csv  data.json  parse_csv.py
ultiplayground/extras/: match_text.py  months_list.py  parse_csv.py  unpacking.py  weeks_list.py
ultiplayground/oop/: animal.py  rabit.py
ultiplayground/scrapping/: axum.py  cloudflare_worker.py  fastify.py  kostya.py  react.py
ultiplayground/snippets/: __init__.py  random_pokemon.py  random_quotes.py
