[tool.poetry]
name = "ultiplayground"
version = "0.1.3"
description = "My Personal Playground"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"
homepage = "https://github.com/UltiRequiem/python"
readme = "README.md"
repository = "https://github.com/UltiRequiem/python"
keywords = ["ultirequiem", "utilities","playground"]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
